[package]
name = "freq-counter"
version = "0.1.0"
authors = ["Andrea Cracco <guilucand@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.5"
ctrlc = "3.1.3"


[[bin]]
name = "freq"
path = "src/main.rs"
